posts for all editable pages and added favicon

--- a/app/_usecases/0001-01-02-name2.md
+++ b/app/_usecases/0001-01-02-name2.md
@@ -1,6 +1,6 @@
 ---
 collection: usecases
-title: Name of Usecase
+title: Name of Usecase 2
 source: Name of source
 description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis. Sed sagittis tempor sapien ac sagittis.
 link: http://developmentseed.org
