Add id to use cases
* Refer to use cases by id in dataset pages

--- a/app/_usecases/0001-01-02-name2.md
+++ b/app/_usecases/0001-01-02-name2.md
@@ -2,6 +2,7 @@
 collection: usecases
 title: Name of Usecase 2
 source: Name of source
+id: usecase-2
 description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis. Sed sagittis tempor sapien ac sagittis.
 link: http://developmentseed.org
 img: usecase2.jpg
