--- a/app/_usecases/0001-01-01-name1.md
+++ b/app/_usecases/0001-01-01-name1.md
@@ -2,6 +2,7 @@
 collection: usecases
 title: Name of Usecase
 source: Name of source
+id: usecase-1
 description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis. Sed sagittis tempor sapien ac sagittis.
 link: http://developmentseed.org
 img: usecase1.jpg
