--- a/app/_usecases/0001-01-03-name3.md
+++ b/app/_usecases/0001-01-03-name3.md
@@ -2,6 +2,7 @@
 collection: usecases
 title: Name of Usecase 3
 source: Name of source
+id: usecase-3
 description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis. Sed sagittis tempor sapien ac sagittis.
 link: http://developmentseed.org
 img: usecase3.jpg
