--- a/app/_about/0001-01-01-about.md
+++ b/app/_about/0001-01-01-about.md
@@ -4,10 +4,37 @@ title: About
 lang: en
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra leo sed libero bibendum pharetra vitae at nibh. Praesent quis sem mattis, ullamcorper ligula sed, venenatis metus. Maecenas ornare tempor eleifend. Vivamus eleifend congue erat, quis rhoncus leo semper ac. In efficitur justo eu mattis vestibulum. Nullam auctor dui eros, eu pharetra erat molestie eu. Sed in nisl risus. Aenean posuere quam ac sapien semper molestie. Nunc congue nulla mi, et consequat tellus dapibus ac. Fusce eget magna ante. Vestibulum quis varius libero. Proin ac tellus eu massa consequat fringilla quis id eros. Etiam laoreet fermentum nibh vel auctor. Cras sed ipsum ac nunc consequat interdum eu quis metus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+### Who are we?
+Iran Open Data is a collaborative initiative undertaken by a community of individuals and organisations. It has been designed and developed by Small Media Foundation in partnership with Development Seed. Iran Open Data would like to expand its community of members, so please get in touch if you’re interested in getting involved.
+
+### What is open data? 
+In the simplest terms, the Open Data Institute describes open data as: ‘data that anyone can access, use and share.’ More specifically, Open Knowledge International’s Open Data Handbook notes that to be considered truly ‘open’, data should adhere to the following three core principles:
+
+- Available and accessible, at no more than a reasonable reproduction cost.
+- Reuseable and redistributional, meaning that the license should permit reuse and redistribution. 
+- Open to Universal Participation, so that everyone must be able to use, re-use and re-distribute data, with no restrictions on usage
+
+### Why Iran Open Data?
+Iranian government agencies at all levels – municipal, provincial, and national – publish an abundance of data publicly. However, more often than not this data is not readily available, or is locked away in inaccessible formats (such as images or PDF), tucked away in different sections of official websites, or is not digitised. 
+
+Iran Open Data aims to make Iranian government data accessible by gathering it together in one place, ready-to-use and pre-converted into machine-readable formats (such as CSV and JSON). Iran Open Data will serve as an online platform that can meet the needs of researchers, journalists and Iranian citizens seeking to understand Iran better through a data driven approach. 
+
+Availability and openness of data is one the characteristics of an accountable and responsible government. Iran Open Data also hopes to highlight the areas that Iranian authorities can increase its transparency and openness for by make more data openly available. 
+
+### What is our methodology?
+
+The main feature of Iran Open Data is that its entire technology process and platform behind is publicly available on Github. The code for the site is available here, the data specification and all the information about available datasets are available here. Depending on the difficulty of gathering or clearing a particular dataset (we call it data ingest), we might develop a script. The code for all the scripts developed by us is available here. We also rely on a host of other tools to capture the datasets locked away in less accessible formats. For instance, to extract data that has been produced in PDFs we currently use Tabula, which is a manual process.   
+
+### How to contribute to the project?
+There are different ways you can get involved in the project. 
+
+Publish your datasets: If you have cleaned datasets that you would like to publish, you can send it to us alongside with the methodology you have used to clean the data. 
+
+Suggest datasets: If you are looking for datasets that you think should be on Iran Open Data, please suggest them to us. We will add it to our todo list. 
+
+Write ingest codes: If you are developer and like to help us by writing ingest codes, please do get in touch.
+
+Sponsor us: Iran Open Data is currently sponsored by Small Media Foundation. We would like to expand our financial sponsors. Please get in touch with us if you can help!
 
 {% include partners.html %}
 
-Suspendisse ornare porttitor eros. Fusce eget enim eros. Quisque dignissim faucibus est, a fringilla tortor bibendum non. Fusce vitae ornare sem. Suspendisse ac libero ac lacus tempor congue et ac turpis. Maecenas sapien quam, faucibus vitae eros semper, aliquet egestas ligula. Nunc ultricies ante enim, mollis feugiat neque aliquet ac. In et nulla vel nisi condimentum tristique. Praesent nec enim lectus.
-
-Suspendisse ac libero ac lacus tempor congue et ac turpis. Maecenas sapien quam, faucibus vitae eros semper, aliquet egestas ligula. Nunc ultricies ante enim, mollis feugiat neque aliquet ac. In et nulla vel nisi condimentum tristique. Praesent nec enim lectus.
