Hide 'usecases' when there are none
* Usecases tab hidden from navbar when there are no use cases in
that language
* Translating use cases from one to the other by clicking on the
language header will display a message "There are no use cases"

--- a/app/_usecases/0001-01-01-name1.md
+++ b/app/_usecases/0001-01-01-name1.md
@@ -7,5 +7,5 @@ description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendiss
 link: http://developmentseed.org
 img: usecase1.jpg
 featured: no
-lang: en
+lang: fa
 ---
