--- a/app/_usecases/0001-01-03-name3.md
+++ b/app/_usecases/0001-01-03-name3.md
@@ -7,5 +7,5 @@ description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendiss
 link: http://developmentseed.org
 img: usecase3.jpg
 featured: no
-lang: en
+lang: fa
 ---
